# transformer

./: .gitignore  CMakeLists.txt  architecture-global.cfg  logger.xml  tbuild.cfg
src/main/: CMakeLists.txt  TODO.txt  main.cpp  xbuild_full.cfg
src/main/transformer/: Config.cpp  Config.h  Execute.cpp  Execute.h  Logger.cpp  Logger.h  Plugin.cpp  Plugin.h  Process.cpp  Process.h  Transformer.cpp  Transformer.h
src/main/transformer/architectures/: Architecture.cpp  Architecture.h  Config.cpp  Config.h  Driver.h  Language.cpp  Language.h  Readme.txt  Specifier.cpp  Specifier.h  Specifiers.cpp  Specifiers.h
src/main/transformer/config/: Exception.cpp  Exception.h  Parser.cpp  Parser.h
src/main/transformer/files/: FileEntries.cpp  FileEntries.h  FileEntry.h  Source.cpp  Source.h
src/main/transformer/generate/: CdtProject.cpp  CdtProject.h
src/main/transformer/model/: Dependency.cpp  Dependency.h  DependencySolved.cpp  DependencySolved.h  Descriptor.cpp  Descriptor.h  Generator.cpp  Generator.h  SystemPath.h  Variant.cpp  Variant.h  Version.cpp  Version.h  VersionNumber.cpp  VersionNumber.h  VersionRange.cpp  VersionRange.h  VersionRanges.cpp  VersionRanges.h
src/main/transformer/repository/: Database.cpp  Database.h  DescriptorReader.cpp  DescriptorReader.h  DescriptorWriter.cpp  DescriptorWriter.h  Repositories.h  Repository.cpp  Repository.h  RepositoryLocal.cpp  RepositoryLocal.h  RepositorySystem.cpp  RepositorySystem.h
src/main/transformer/system/: ProcessBoost.cpp  ProcessBoost.h  ProcessSystem.cpp  ProcessSystem.h
src/test/: test.cpp
(+14 files in other folders)
